--- a/templates/index.html
+++ b/templates/index.html
@@ -186,7 +186,7 @@
   </head>
   <body>
     <header>
-      <img src="/static/PDF%20to%20Speech%20Converter.png" alt="logo" />
+      <img src="/static/PDF to Speech Converter.png" alt="logo" />
       <h1>pdfTalk</h1>
     </header>
     <p>make your <i>pdf</i> talk by converting it to <b>audio...</b></p>
