--- a/templates/index.html
+++ b/templates/index.html
@@ -186,9 +186,10 @@
   </head>
   <body>
     <header>
-      <img src="/static/PDF to Speech Converter.png" alt="logo" />
-      <h1>pdfTalk</h1>
-    </header>
+  <img src="/static/PDF%20to%20Speech%20Converter.png" alt="logo" />
+  <h1>pdfTalk</h1>
+</header>
+
     <p>make your <i>pdf</i> talk by converting it to <b>audio...</b></p>
     <form method="post" enctype="multipart/form-data" action="/">
       <!-- PDF preview container -->
